; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_schroedinger.c_SchroFrameFree.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_schroedinger.c_SchroFrameFree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.picture_free_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @SchroFrameFree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SchroFrameFree(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.picture_free_t*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.picture_free_t*
  store %struct.picture_free_t* %7, %struct.picture_free_t** %5, align 8
  %8 = load %struct.picture_free_t*, %struct.picture_free_t** %5, align 8
  %9 = icmp ne %struct.picture_free_t* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %19

11:                                               ; preds = %2
  %12 = load %struct.picture_free_t*, %struct.picture_free_t** %5, align 8
  %13 = getelementptr inbounds %struct.picture_free_t, %struct.picture_free_t* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @picture_Release(i32 %14)
  %16 = load %struct.picture_free_t*, %struct.picture_free_t** %5, align 8
  %17 = call i32 @free(%struct.picture_free_t* %16)
  %18 = load i32*, i32** %3, align 8
  br label %19

19:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @picture_Release(i32) #1

declare dso_local i32 @free(%struct.picture_free_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
